--- a/mysite/about_us/templates/about_us/about_us.html
+++ b/mysite/about_us/templates/about_us/about_us.html
@@ -38,6 +38,9 @@
 </style>
 
 <br> <br> <br> <br>
-<p align="center">доделать о нас</p>
+<h2> <center> Lionroom - гарантия вашего комфорта </center></h2>
+<h3> <center>Работаем более пяти лет!</center></h3>
+<h4> <center>Индивидуальный подход к каждому</center></h4>
+<h5> <center>Подберем коттедж к каждому</center></h5>
 </body>
 </html>
