--- a/mysite/contact/templates/contact/contact.html
+++ b/mysite/contact/templates/contact/contact.html
@@ -43,8 +43,7 @@
 <div style="position:absolute; style=background-color: #eeeeee; right:37% ;" class="p-5 mb-4  rounded-3">
     <div align="center" class="container-fluid py-5 " style="background-color: #eeeeee; border: 0px; border-radius: 15px;">
         <h1 style="background-color: #eeeeee;" class="display-5 fw-bold">Наши контакты</h1>
-        <p style="background-color: #eeeeee;" class="col-md-8 fs-4">Текст.</p>
-        <button class="btn btn-primary btn-lg" type="button"></button>
+        <p style="background-color: #eeeeee;" class="col-md-8 fs-4">instagram lionroom.krd</p>
     </div>
 </div>
 </body>
