--- a/mysite/more1/templates/more1/more1.html
+++ b/mysite/more1/templates/more1/more1.html
@@ -92,8 +92,8 @@
     <img src="https://70.img.avito.st/image/1/X7YeMbay818omDFaLEAa__GS81m-kPE" style="position: relative; padding: 5px; margin: 5px; width: 415px; height: 300px; top: 650px; margin-left: 10px;">
 </div>
 <div align="center" style="position: relative; padding: 5px; top: 700px; margin-bottom: 500px;">
-    <H1>Для заказа обращаться по номеру</H1>
-    <h1 style="padding: 80px; font-family: Noto Sans, sans-serif; font-size:4vw;">Егор лох 1488</h1>
+    <H1>Для заказа пишите в директ инстаграм</H1>
+    <h1 style="padding: 80px; font-family: Noto Sans, sans-serif; font-size:4vw;">lionroom.krd</h1>
 </div>
 </body>
 </html>
