--- a/mysite/more2/templates/more2/more2.html
+++ b/mysite/more2/templates/more2/more2.html
@@ -91,8 +91,8 @@
     <img src="https://80.img.avito.st/image/1/HUKdj7aysaurJnOuq89TP3sssa09LrM" style="position: relative; padding: 5px; margin: 5px; width: 415px; height: 300px; top: 650px; margin-left: 10px;">
 </div>
 <div align="center" style="position: relative; padding: 5px; top: 700px; margin-bottom: 500px;">
-    <H1>Для заказа обращаться по номеру</H1>
-    <h1 style="padding: 80px;">1000-7</h1>
+    <H1>Для заказа пишите в директ в инстаграм</H1>
+    <h1 style="padding: 80px;">lionroom.krd</h1>
 </div>
 </body>
 </html>
