--- a/mysite/main/templates/main/index.html
+++ b/mysite/main/templates/main/index.html
@@ -46,7 +46,7 @@
     }
 </style>
 <div>
-<div style="position:relative; float: left; margin-top: 0%; margin-left: 10%" align="left" class="col-md-6">
+<div style="position:relative; margin-top: 1%; " class=" margin-left: auto; margin-right: auto;">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" style="background: #FFFFFF; color: black;">
         <div class="col p-4 d-flex flex-column position-static">
           <strong class="d-inline-block mb-2 text-primary">ул. Фридриха Энгельса, 152</strong>
@@ -57,14 +57,13 @@
           <a href="/more1" class="stretched-link">Подробнее</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-            <img src="https://26.img.avito.st/image/1/l0Mg_rayO6oWV_mvAoTSCs9dO6yAXzk" class="bd-placeholder-img" width="490" height="500"  role="img"  aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="pics/fon.jpg" class="bd-placeholder-img" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
         </div>
       </div>
     </div>
-<img src="pics/dom1_map.png" style="position:relative; margin-left: 3%" width="500" height="500" >
 </div>
 <div>
-<div style="position:relative; float: left; margin-top: 3%; margin-left: 10%" align="left" class="col-md-6">
+<div style="position:relative; margin-top: 1%; " class=" margin-left: auto; margin-right: auto; width-max: 60%">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" style="background: #FFFFFF; color: black;">
         <div class="col p-4 d-flex flex-column position-static">
           <strong class="d-inline-block mb-2 text-primary">ул. Фурманова, 31</strong>
@@ -75,51 +74,10 @@
           <a href="/more2" class="stretched-link">Подробнее</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <img src="https://69.img.avito.st/image/1/IMsab7ayjCIsxk4nVntexODMjCS6zo4" class="bd-placeholder-img" width="490" height="500"  role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <img src="pics/fon.jpg" class="bd-placeholder-img" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
         </div>
       </div>
     </div>
-<img src="pics\dom2_map.png" style="position:relative; margin-left: 3%; margin-top: 4.5%" width="500" height="500" >
 </div>
-
-<br> <br>
-<h1 align="center">Наши товары</h1>
-<br> <br>
-<div style="background-color: #eeeeee;" class="album py-5" >
-<div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 bordering" >
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">БАНЯ</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-muted">9 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"></rect><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-
-            <div class="card-body">
-              <p class="card-text">ЕЛОЧКИ</p>
-              <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                  <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                  <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                </div>
-                <small class="text-muted">9 mins</small>
-              </div>
-            </div>
-          </div>
-        </div>
-</div>
-      </div>
 </body>
 </html>
