--- a/mysite/main/templates/main/index.html
+++ b/mysite/main/templates/main/index.html
@@ -46,7 +46,7 @@
     }
 </style>
 <div>
-<div style="position:relative; margin-top: 1%; " class=" margin-left: auto; margin-right: auto;">
+<div style="position:relative; margin-top: 1%; max-width: 60%; margin-left: auto; margin-right: auto">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" style="background: #FFFFFF; color: black;">
         <div class="col p-4 d-flex flex-column position-static">
           <strong class="d-inline-block mb-2 text-primary">ул. Фридриха Энгельса, 152</strong>
@@ -63,7 +63,7 @@
     </div>
 </div>
 <div>
-<div style="position:relative; margin-top: 1%; " class=" margin-left: auto; margin-right: auto; width-max: 60%">
+<div style="position:relative; margin-top: 1%; max-width: 60%; margin-left: auto; margin-right: auto">
       <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative" style="background: #FFFFFF; color: black;">
         <div class="col p-4 d-flex flex-column position-static">
           <strong class="d-inline-block mb-2 text-primary">ул. Фурманова, 31</strong>
