--- a/mysite/contact/templates/contact/contact.html
+++ b/mysite/contact/templates/contact/contact.html
@@ -40,7 +40,7 @@
 
 
 <br> <br> <br> <br> <br> <br> <br> <br>
-<div style="position:absolute; style=background-color: #eeeeee; right:37% ;" class="p-5 mb-4  rounded-3">
+<div style="position:absolute; style=background-color: #eeeeee; margin-left: auto; margin-right: auto" class="p-5 mb-4  rounded-3">
     <div align="center" class="container-fluid py-5 " style="background-color: #eeeeee; border: 0px; border-radius: 15px;">
         <h1 style="background-color: #eeeeee;" class="display-5 fw-bold">Наши контакты</h1>
         <p style="background-color: #eeeeee;" class="col-md-8 fs-4">instagram lionroom.krd</p>
