--- a/mysite/more2/templates/more2/more2.html
+++ b/mysite/more2/templates/more2/more2.html
@@ -2,6 +2,39 @@
 <!doctype html>
 <html lang="ru">
 <style>
+    .text{
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 2%;
+    text-align: center;
+    }
+    .images{
+    position relative;
+    float: left;
+    max-width: 20%;
+    max-height: 20%;
+    margin-left: 10%;
+    margin-right: auto;
+    margin-top: 2%;
+    }
+    .imagestwo{
+    position relative;
+    float: left;
+    max-width: 20%;
+    max-height: 20%;
+    margin-left: 10%;
+    margin-right: auto;
+    margin-top: 2%;
+    }
+    .imageslast{
+    position relative;
+    max-width: 20%;
+    max-height: 20%;
+    margin-left: 10%;
+    margin-right: auto;
+    margin-top: 2%;
+    }
     .borderf{
     padding: 0px;
     border: 1px solid #DCDCDC;
@@ -9,27 +42,23 @@
     }
     .image{
     position: relative;
-    margin: 5px;
     float: right;
-    width: 640px;
-    height: 600px;
+    width: 50%;
+    max-height: 90%;
     }
     .first{
-    width: 1300px;
-    height: 600 px;
-    text-align: center ;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    margin-right: -50%;
-    transform: translate(-50%, -50%);
+    width: 60%;
+    min-height: 70%;
+    position: relative;
+    margin-left: auto;
+    margin-right: auto;
     background: #FFFFFF;
     color: black;
     }
     .headline{
     position: absolute;
     top: 0px;
-    height: 73px;
+    height: 100%;
     background-color: #eeeeee;
     width: 100%;
     z-index: -1;
@@ -62,10 +91,10 @@
 
 <body style="background-color:#fbfbfd";>
 <h1 align="center" >Дом 2</h1>
-<div class="first borderf">
+<div class="first borderf" style="background-color:#fbfbfd">
     <img src="https://13.img.avito.st/image/1/ZHQfc7ayyJ0p2gqYWw48EvvQyJu_0so" class="image" style="border: 0px; border-radius: 10px;" >
-    <h1 style="margin-top: 10px;">Дом 2</h1>
-    <h6 align="left" style=" margin: 10px;">
+    <h1 style="margin-top: 10px;" align="center">Дом 2</h1>
+    <h6 align="left" style=" margin: 1%; margin-bottom: 2%">
         Весь первый этаж покрыт плиткой, а значит можно курить кальян без страха прожечь покрытие, дымим до утра!<br> <br>
         Неоновая подсветка во всем доме, что создает эффект
 «NEON PARTY» <br> <br>
@@ -85,14 +114,14 @@
         - Предоставляем тапочки <br> <br>
     </h6>
 </div>
-<div>
-    <img src="https://47.img.avito.st/image/1/ggOdkbayLuqrOOzvlf_8DGcyLuw9MCw" style="position: relative; padding: 5px; margin: 5px; width: 415px; height: 300px; top: 650px; margin-left: 305px;">
-    <img src="https://40.img.avito.st/image/1/KXx3-rayhZVBU0eQKZJXc41ZhZPXW4c" style="position: relative; padding: 5px; margin: 5px; width: 415px; height: 300px; top: 650px; margin-left: 10px;">
-    <img src="https://80.img.avito.st/image/1/HUKdj7aysaurJnOuq89TP3sssa09LrM" style="position: relative; padding: 5px; margin: 5px; width: 415px; height: 300px; top: 650px; margin-left: 10px;">
+<div style="background-color:#fbfbfd">
+    <img src="http://kartina-optom.com.ua/images/stories/virtuemart/product/50х50.jpg" class="images">
+    <img src="http://kartina-optom.com.ua/images/stories/virtuemart/product/50х50.jpg" class="imagestwo">
+    <img src="http://kartina-optom.com.ua/images/stories/virtuemart/product/50х50.jpg" class="imageslast">
 </div>
-<div align="center" style="position: relative; padding: 5px; top: 700px; margin-bottom: 500px;">
-    <H1>Для заказа пишите в директ в инстаграм</H1>
-    <h1 style="padding: 80px;">lionroom.krd</h1>
+<div class="text" style="background-color:#fbfbfd">
+<H1>Для заказа пишите в директ инстаграм</H1>
+<h1 style="padding: 3%; font-family: Noto Sans, sans-serif; font-size:4vw;">lionroom.krd</h1>
 </div>
 </body>
 </html>
