--- a/mysite/main/templates/main/index.html
+++ b/mysite/main/templates/main/index.html
@@ -57,7 +57,7 @@
           <a href="/more1" class="stretched-link">Подробнее</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-            <img src="pics/fon.jpg" class="bd-placeholder-img" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="https://i.ibb.co/1KQtD4s/1.jpg" class="bd-placeholder-img" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
         </div>
       </div>
     </div>
