--- a/mysite/more1/templates/more1/more1.html
+++ b/mysite/more1/templates/more1/more1.html
@@ -12,26 +12,26 @@
     .images{
     position relative;
     float: left;
-    max-width: 20%;
-    max-height: 20%;
-    margin-left: 10%;
+    max-width: 25%;
+    max-height: 25%;
+    margin-left: 7%;
     margin-right: auto;
     margin-top: 2%;
     }
     .imagestwo{
     position relative;
     float: left;
-    max-width: 20%;
-    max-height: 20%;
-    margin-left: 10%;
+    max-width: 25%;
+    max-height: 25%;
+    margin-left: 5%;
     margin-right: auto;
     margin-top: 2%;
     }
     .imageslast{
     position relative;
-    max-width: 20%;
-    max-height: 20%;
-    margin-left: 10%;
+    max-width: 25%;
+    max-height: 25%;
+    margin-left: 5%;
     margin-right: auto;
     margin-top: 2%;
     }
@@ -89,10 +89,10 @@
     <div class="headline"></div>
 </head>
 
-<body style="background-color:#fbfbfd";>
+<body style="background-color:#fbfbfd">
 
 <div class="first borderf" style="background-color:#fbfbfd">
-    <img src="https://01.img.avito.st/image/1/RAsN4bay6OI7SCrnCdQmQuJC6OStQOo" class="image" style="border: 0px; border-radius: 10px;" >
+    <img src="https://i.ibb.co/026XFYP/l96-Yps-2e6-Q.jpg" class="image" style="border: 0px; border-radius: 10px;" >
     <h1 style="margin-top: 10px;" align="center" >Коттедж No.1</h1>
     <h3 align="center" >ул. Фридриха Энгельса, 152</h3>
     <br>
@@ -117,9 +117,9 @@
         </h6>
 </div>
 <div style="background-color:#fbfbfd">
-    <img src="http://kartina-optom.com.ua/images/stories/virtuemart/product/50х50.jpg" class="images">
-    <img src="http://kartina-optom.com.ua/images/stories/virtuemart/product/50х50.jpg" class="imagestwo">
-    <img src="http://kartina-optom.com.ua/images/stories/virtuemart/product/50х50.jpg" class="imageslast">
+    <img src="https://i.ibb.co/XXYnzmZ/sj5-J6-Pbq1-U.jpg" class="images">
+    <img src="https://i.ibb.co/KmC9Sbr/j-Zeu9-BH4-1-E.jpg" class="imagestwo">
+    <img src="https://i.ibb.co/x5885dN/js-MCn-Px9mqwqrwerqwerqwer.jpg" class="imageslast">
 </div>
 <div class="text" style="background-color:#fbfbfd">
 <H1>Для заказа пишите в директ инстаграм</H1>
