--- a/mysite/main/templates/main/index.html
+++ b/mysite/main/templates/main/index.html
@@ -57,7 +57,7 @@
           <a href="/more1" class="stretched-link">Подробнее</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-            <img src="https://i.ibb.co/1KQtD4s/1.jpg" class="bd-placeholder-img" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <img src="https://i.ibb.co/MnYPkRd/2.jpg" class="bd-placeholder-img" style="max-width: 500px; max-height: 500px;" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@
           <a href="/more2" class="stretched-link">Подробнее</a>
         </div>
         <div class="col-auto d-none d-lg-block">
-          <img src="pics/fon.jpg" class="bd-placeholder-img" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+          <img src="https://i.ibb.co/qBS6rXT/4.jpg" class="bd-placeholder-img" style="max-width: 500px; max-height: 500px;" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
         </div>
       </div>
     </div>
