--- a/mysite/more2/templates/more2/more2.html
+++ b/mysite/more2/templates/more2/more2.html
@@ -12,26 +12,26 @@
     .images{
     position relative;
     float: left;
-    max-width: 20%;
-    max-height: 20%;
-    margin-left: 10%;
+    max-width: 25%;
+    max-height: 25%;
+    margin-left: 7%;
     margin-right: auto;
     margin-top: 2%;
     }
     .imagestwo{
     position relative;
     float: left;
-    max-width: 20%;
-    max-height: 20%;
-    margin-left: 10%;
+    max-width: 25%;
+    max-height: 25%;
+    margin-left: 5%;
     margin-right: auto;
     margin-top: 2%;
     }
     .imageslast{
     position relative;
-    max-width: 20%;
-    max-height: 20%;
-    margin-left: 10%;
+    max-width: 25%;
+    max-height: 25%;
+    margin-left: 5%;
     margin-right: auto;
     margin-top: 2%;
     }
@@ -92,7 +92,7 @@
 <body style="background-color:#fbfbfd";>
 <h1 align="center" >Дом 2</h1>
 <div class="first borderf" style="background-color:#fbfbfd">
-    <img src="https://13.img.avito.st/image/1/ZHQfc7ayyJ0p2gqYWw48EvvQyJu_0so" class="image" style="border: 0px; border-radius: 10px;" >
+    <img src="https://i.ibb.co/pddsYBV/3.jpg" class="image" style="border: 0px; border-radius: 10px;" >
     <h1 style="margin-top: 10px;" align="center">Дом 2</h1>
     <h6 align="left" style=" margin: 1%; margin-bottom: 2%">
         Весь первый этаж покрыт плиткой, а значит можно курить кальян без страха прожечь покрытие, дымим до утра!<br> <br>
@@ -115,9 +115,9 @@
     </h6>
 </div>
 <div style="background-color:#fbfbfd">
-    <img src="http://kartina-optom.com.ua/images/stories/virtuemart/product/50х50.jpg" class="images">
-    <img src="http://kartina-optom.com.ua/images/stories/virtuemart/product/50х50.jpg" class="imagestwo">
-    <img src="http://kartina-optom.com.ua/images/stories/virtuemart/product/50х50.jpg" class="imageslast">
+    <img src="https://i.ibb.co/0rkCsgv/10.jpg" class="images">
+    <img src="https://i.ibb.co/vHyF4kc/8.jpg" class="imagestwo">
+    <img src="https://i.ibb.co/qkWg0vH/9.jpg" class="imageslast">
 </div>
 <div class="text" style="background-color:#fbfbfd">
 <H1>Для заказа пишите в директ инстаграм</H1>
