--- a/mysite/more1/templates/more1/more1.html
+++ b/mysite/more1/templates/more1/more1.html
@@ -92,7 +92,7 @@
 <body style="background-color:#fbfbfd">
 
 <div class="first borderf" style="background-color:#fbfbfd">
-    <img src="https://i.ibb.co/026XFYP/l96-Yps-2e6-Q.jpg" class="image" style="border: 0px; border-radius: 10px;" >
+    <img src="https://i.ibb.co/FKMk2kc/1.jpg" class="image" style="border: 0px; border-radius: 10px;" >
     <h1 style="margin-top: 10px;" align="center" >Коттедж No.1</h1>
     <h3 align="center" >ул. Фридриха Энгельса, 152</h3>
     <br>
@@ -119,7 +119,7 @@
 <div style="background-color:#fbfbfd">
     <img src="https://i.ibb.co/XXYnzmZ/sj5-J6-Pbq1-U.jpg" class="images">
     <img src="https://i.ibb.co/KmC9Sbr/j-Zeu9-BH4-1-E.jpg" class="imagestwo">
-    <img src="https://i.ibb.co/x5885dN/js-MCn-Px9mqwqrwerqwerqwer.jpg" class="imageslast">
+    <img src="https://i.ibb.co/hD5KngV/7.jpg" class="imageslast">
 </div>
 <div class="text" style="background-color:#fbfbfd">
 <H1>Для заказа пишите в директ инстаграм</H1>
