--- a/mysite/more2/templates/more2/more2.html
+++ b/mysite/more2/templates/more2/more2.html
@@ -89,11 +89,12 @@
     <div class="headline"></div>
 </head>
 
-<body style="background-color:#fbfbfd";>
-<h1 align="center" >Дом 2</h1>
+<body style="background-color:#fbfbfd">
 <div class="first borderf" style="background-color:#fbfbfd">
     <img src="https://i.ibb.co/pddsYBV/3.jpg" class="image" style="border: 0px; border-radius: 10px;" >
-    <h1 style="margin-top: 10px;" align="center">Дом 2</h1>
+    <h1 style="margin-top: 10px;" align="center" >Дом No.2</h1>
+    <h3 align="center" >ул. Фурманова, 31</h3>
+    <br>
     <h6 align="left" style=" margin: 1%; margin-bottom: 2%">
         Весь первый этаж покрыт плиткой, а значит можно курить кальян без страха прожечь покрытие, дымим до утра!<br> <br>
         Неоновая подсветка во всем доме, что создает эффект
@@ -107,11 +108,11 @@
 это для любителей посиделок<br> <br>
 <br>
         ДОП УСЛУГИ:<br><br>
-        - Аренда кальяна - 800р/сутки <br> <br>
-        - Аренда покера - 500р/сутки <br> <br>
-        - Аренда стола  для бирпонга - 1500р/сутки <br> <br>
-        - Холодильник с алкоголем <br> <br>
-        - Предоставляем тапочки <br> <br>
+        - Аренда кальяна - 800р/сутки <br>
+        - Аренда покера - 500р/сутки <br>
+        - Аренда стола  для бирпонга - 1500р/сутки <br>
+        - Холодильник с алкоголем <br>
+        - Предоставляем тапочки <br>
     </h6>
 </div>
 <div style="background-color:#fbfbfd">
