--- a/mysite/more1/templates/more1/more1.html
+++ b/mysite/more1/templates/more1/more1.html
@@ -122,8 +122,8 @@
     <img src="https://i.ibb.co/hD5KngV/7.jpg" class="imageslast">
 </div>
 <div class="text" style="background-color:#fbfbfd">
-<H1>Для заказа пишите в директ инстаграм</H1>
-<h1 style="padding: 3%; font-family: Noto Sans, sans-serif; font-size:4vw;">lionroom.krd</h1>
+<H1>Для заказа звоните по номеру</H1>
+<h1 style="padding: 3%; font-family: Noto Sans, sans-serif; font-size:4vw;">+7 (918) 974-18-61</h1>
 </div>
 </body>
 </html>
