--- a/mysite/contact/templates/contact/contact.html
+++ b/mysite/contact/templates/contact/contact.html
@@ -35,15 +35,21 @@
     width: 100%;
     z-index: -1;
     }
+     .contacts{
+   position:relative;
+   max-width: 30%;
+   margin-top: auto;
+   margin-bottom: auto;
+   margin-left: auto;
+   margin-right: auto;
 </style>
 
-
-
-<br> <br> <br> <br> <br> <br> <br> <br>
-<div style="position:absolute; style=background-color: #eeeeee; margin-left: auto; margin-right: auto" class="p-5 mb-4  rounded-3">
-    <div align="center" class="container-fluid py-5 " style="background-color: #eeeeee; border: 0px; border-radius: 15px;">
+<div class="p-5 mb-4  rounded-3 contacts">
+    <div align="center" class="container-fluid py-5 " style="background-color: #eeeeee; border: 0px; border-radius: 15px; margin-top: 30%;">
         <h1 style="background-color: #eeeeee;" class="display-5 fw-bold">Наши контакты</h1>
-        <p style="background-color: #eeeeee;" class="col-md-8 fs-4">instagram lionroom.krd</p>
+        <p style="background-color: #eeeeee;" class="col-md-8 fs-4">Instagram: lionroom.krd</p>
+        <p style="background-color: #eeeeee;" class="col-md-8 fs-4">Телефон для связи: <br> +7 (918) 974-18-61</p>
+
     </div>
 </div>
 </body>
