--- a/mysite/faq/templates/faq/faq.html
+++ b/mysite/faq/templates/faq/faq.html
@@ -36,5 +36,15 @@
     </header>
 </div>
 <div class="headline"></div>
-<div style="position:absolute; right:10%;" class="col-12 col-lg-9 offset-lg-1 txt-page--wyswig px-3 px-sm-0"> <p data-set="#id-874576379" class="questionBox-q w-100">Во сколько заезд и выезд?</p> <p id="id-874576379" class="pl-5 questionBox-a w-100">Заезд с 14:00 до 23:00; Выезд в 12:00 следующего дня.</p> <p data-set="#id-874576379" class="questionBox-q w-100">За сколько по времени нужно бронировать дом? </p> <p id="id-874576379" class="pl-5 questionBox-a w-100">Чем раньше тем лучше! У нас проходит много мероприятий к которым готовятся заранее, и бронируют соответственно тоже!</p> <p data-set="#id-874576379" class="questionBox-q w-100">Как бронировать ? </p> <p id="id-874576379" class="pl-5 questionBox-a w-100"></p>Пишите нам в директ в инстаграме lionroom.krd </div></body>
+<div style="position:relative; margin-left:auto; margin-right: auto; max-width: 60%; margin-top: 5%;" class="col-12 col-lg-9 offset-lg-1 txt-page--wyswig px-3 px-sm-0">
+    <h1 data-set="#id-874576379" class="questionBox-q w-100">Во сколько заезд и выезд?</h1>
+    <h4 id="id-874576379" class="pl-5 questionBox-a w-100">Заезд с 14:00 до 23:00; Выезд в 12:00 следующего дня.</h4>
+    <br>
+    <h1 data-set="#id-874576379" class="questionBox-q w-100">За сколько по времени нужно бронировать дом? </h1>
+    <h4 id="id-874576379" class="pl-5 questionBox-a w-100">Чем раньше тем лучше! У нас проходит много мероприятий к которым готовятся заранее, и бронируют соответственно тоже!</h4>
+    <br>
+    <h1 data-set="#id-874576379" class="questionBox-q w-100">Как бронировать?</h1>
+    <h4 id="id-874576379" class="pl-5 questionBox-a w-100">Звоните нам по номеру: +7 (918) 974-18-61</h4>
+</div>
+</body>
 </html>
