--- a/mysite/contact/templates/contact/contact.html
+++ b/mysite/contact/templates/contact/contact.html
@@ -38,6 +38,7 @@
      .contacts{
    position:relative;
    max-width: 30%;
+   min-width: 320px;
    margin-top: auto;
    margin-bottom: auto;
    margin-left: auto;
